Bug 1006027 - ConsoleAPI uses timestamps in msecs. r=bz, a=lsblakk